--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -9,5 +9,5 @@
         </div>
     </div>
     <br>
-    <p>Новый пользователь? <a href="{{ url_for('register') }}">Click to Register!</a></p>
+    <p>Новый пользователь? <a href="{{ url_for('register') }}">Нажмите для регистрации!</a></p>
 {% endblock %}
